# nba-lab

./: .commitlintrc.js  .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  eslint.config.mjs  jest.config.js  lefthook.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  tsconfig.json  vercel.json
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-nextjs-dev.txt  task-1-pytest-setup.txt  task-2-validation-report.json  task-3-known-pair.txt  task-3-sql-output.txt  task-4-schema-invalid.txt  task-4-schema-valid.txt  task-5-graph-stats.txt  task-5-known-edge.txt  task-6-centrality-valid.txt  task-7-layout-valid.txt
.sisyphus/plans/: nba-teammate-network.md
data/: metadata.json  sample_edges.json  sample_nodes.json
db/: nba_raw_data.db
public/data/: nodes.json
schemas/: edges.schema.json  nodes.schema.json
scripts/: build_graph.py  compute_layout.py  compute_metrics.py  compute_paths.py  export_json.py  extract_teammates.py  validate_db.py  validate_json_schema.py
src/app/: layout.tsx  page.module.css  page.tsx  use-network-page-state.ts
src/components/: EmptyState.tsx  ErrorBoundary.tsx  ErrorState.tsx  Filters.tsx  LoadingState.tsx  NetworkGraph.styles.ts  NetworkGraph.tsx  NetworkGraph.utils.ts  NetworkGraphHooks.ts  NetworkGraphLoader.tsx  PlayerSearchItem.tsx  PlayerTooltip.tsx  SearchBar.tsx  ShortestPath.styles.ts  ShortestPath.tsx  ShortestPath.types.ts  ShortestPath.utils.ts  (+5 more)
test-results/: .last-run.json
(+36 files in other folders)
