[project]
name = "nba-lab"
version = "0.1.0"
description = "NBA teammate graph analysis — data pipeline, centrality metrics, and ForceAtlas2 layout computation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "jsonschema>=4.26.0",
    "networkx>=3.6",
    "numpy>=2.4",
    "python-louvain>=0.16",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.9",
]

# ── Ruff (linting + formatting) ──────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length — handled by formatter
    "E731",  # lambda assignment
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # allow assert in tests

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-n auto --dist loadscope"
